--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -26,12 +26,13 @@
 }
 
 @keyframes slideDown {
-  from {
-    transform: translateY(-100%);
-  }
-  to {
-    transform: translateY(0);
-  }
+     from {
+          transform: translateY(-100%);
+     }
+
+     to {
+          transform: translateY(0);
+     }
 }
 
 .site_header {
@@ -271,6 +272,10 @@ span.cartcount {
 }
 
 @media only screen and (max-width: 767px) {
+     .site_header_wrapper {
+          padding: 0.5rem 0;
+     }
+
      body.nav_added {
           overflow: hidden;
      }
