--- a/src/components/common-banner/innerbanner.css
+++ b/src/components/common-banner/innerbanner.css
@@ -1,10 +1,10 @@
 .inner-banner{
-     background: #75DEBF;
-     color: #626262;
+     background: #0a2c0f;
+     color: #ffffff;
 }
 
 .inner-banner h1{
-     color: #343434;
+     color: #dddddd;
      padding: 6rem 0;
 }
 
