--- a/src/components/cart/cart.css
+++ b/src/components/cart/cart.css
@@ -31,15 +31,15 @@
 }
 
 .price-header {
-  font-size: 12px;
-  font-weight: 700;
+  font-size: 1rem;
+  font-weight: 600;
   margin: 0 0 16px;
   color: #535766;
 }
 
 .price-item {
   margin-bottom: 12px;
-  line-height: 16px;
+  line-height: 1.3;
   font-size: 14px;
   color: #282c3f;
 }
@@ -173,7 +173,7 @@
 
 .quantity-control button {
   border: none;
-  border-radius: 50%;
+  border-radius: 4px;
   outline: none;
   width: 28px;
   height: 28px;
@@ -217,38 +217,53 @@
 }
 
 @media only screen and (max-width:767px) {
-     .bag-items-container {
-          width: 100%;
-          padding-right: 0;
-     }
-     .bag-summary{
-          width: 100%;
-          margin-top: 20px;
-     }
+  .bag-items-container {
+    width: 100%;
+    padding-right: 0;
+  }
+
+  .bag-summary {
+    width: 100%;
+    margin-top: 20px;
+  }
 }
 
 @media only screen and (max-width: 576px) {
-    .item-right-part>* {
-        flex: 0 1 100%;
-    }
-    .item-right-part{
-      gap: 10px;
-    }
-    .quantity-control button{
-      width: 22px;
-      height: 22px;
-    }
-    .remove-from-cart{
-      font-size: 18px;
-      right: 15px;
-    }
-    .item-name {
+  .item-right-part>* {
+    flex: 0 1 100%;
+  }
+
+  .item-right-part {
+    gap: 10px;
+  }
+
+  .quantity-control button {
+    width: 22px;
+    height: 22px;
+  }
+
+  .remove-from-cart {
+    font-size: 18px;
+    right: 15px;
+  }
+
+  .item-name {
     font-size: 0.9rem;
-    }
-    .slick-prev {
-        left: -7px;
-    }
-    .slick-next {
-        right: -7px;
-    }
+  }
+
+  .slick-prev {
+    left: -7px;
+  }
+
+  .slick-next {
+    right: -7px;
+  }
+
+  .price-header {
+    font-size: 0.8rem;
+  }
+
+  .bag-summary {
+    margin-top: 10px;
+  }
 }
