--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -102,3 +102,9 @@ footer hr {
           margin-bottom: 2rem;
      }
 }
+
+@media only screen and (max-width:575px){
+     footer p{
+          font-size: 0.9rem;
+     }
+}
