--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -327,3 +327,23 @@ span.cartcount {
      }
 
 }
+
+@media only screen and (max-width: 575px) {
+     .top_bar {
+          font-size: 0.6rem;
+     }
+
+     .site_header_wrapper {
+          padding: 0.2rem 0;
+     }
+
+     .mobile_menu_btn {
+          width: 1.2rem;
+          height: 0.8rem;
+     }
+
+     .nav_icons_list li a {
+          font-size: 1.2rem;
+     }
+
+}
